unpackaged/main/default/objects/Contact/fields/AdditionalEmail__c.field-meta.xml
<CustomField>
    <fullName>AdditionalEmail__c</fullName>
    <label>Дополнительная эл.почта</label>
    <type>Email</type>
</CustomField>