unpackaged/main/default/objects/Contact/fields/MobilePhone2__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone2__c</fullName>
    <label>Мобильный телефон 2</label>
    <type>Phone</type>
</CustomField>