unpackaged/main/default/objects/Contact/fields/ObjectCode_1C__c.field-meta.xml
<CustomField>
    <fullName>ObjectCode_1C__c</fullName>
    <label>1CCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>