unpackaged/main/default/objects/Contact/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник ответственный за Контакт</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Контакты</relationshipLabel>
    <relationshipName>mDW3</relationshipName>
    <type>Lookup</type>
</CustomField>